--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native/new-app-screen": "0.80.2",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.24",
+    "@react-navigation/stack": "^7.4.5",
     "react": "19.1.0",
     "react-native": "0.80.2",
     "react-native-dropdown-picker": "^5.4.6",
