--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
     "react-native-svg": "^15.12.1",
+    "react-native-svg-transformer": "^1.5.1",
     "react-native-svg-uri": "^1.2.3"
   },
   "devDependencies": {
