--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.80.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.27.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
     "react-native-svg": "^15.12.1",
